[package]
name = "alpha-blend"
edition = "2024"
license = "MIT"

description = "Alpha blending and compositing"
repository = "https://github.com/crates-lurey-io/alpha-blend"
version = "0.2.1"
rust-version = "1.85"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
must_use_candidate = "deny"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
cargo-hack = { version = "0.6.45", locked = true }
cargo-semver-checks = { version = "0.48.0", locked = true }
just = { version = "1.40.0" }

[dependencies]
bytemuck = { version = "1.23.1", optional = true }
libm = { version = "0.2.15", default-features = false, optional = true }

[features]
std = []
default = ["libm", "libm-arch"]
libm = ["dep:libm"]
libm-arch = ["libm/arch"]
bytemuck = ["dep:bytemuck"]

[dev-dependencies]
bytemuck = "1.23.1"
png = "0.17.16"

[[example]]
name = "porter-duff"
path = "examples/porter-duff.rs"
required-features = ["bytemuck"]
